dropdown menus fixing for dev team

--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -185,7 +185,7 @@
 
 	var features = [];
 	$.each(featureJSON, function(i, obj) {
-	    features.push([obj.name]);
+	    features.push([obj.name.value]);
 	});
 
 
