--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -184,11 +184,11 @@
 	var featureJSON = $.getJSON("json/features/feature_list.json");
 
 	var features = [];
-	$.each(featureJSON.name, function(i, obj) {
+	$.each(featureJSON.name, function(obj) {
 	    features.push([obj.value]);
 	});
 	
-	alert(features[1]);
+	// alert(features[1]);
 
 
 	// var websiteURL = "www.leighmans.com";
