--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -184,7 +184,7 @@
 	var featureJSON = $.getJSON("json/features/feature_list.json");
 
 	var features = [];
-	$.each(featureJSON.name, function(obj) {
+	$.each(featureJSON.name, function(i, obj) {
 	    features.push([obj.value]);
 	});
 	
