--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -183,6 +183,8 @@
 	
 	var featureJSON = $.getJSON("json/features/feature_list.json");
 
+	alert(featureJSON);
+
 	var features = [];
 	$.each(featureJSON.name, function(i, obj) {
 	    features.push([obj.value]);
