--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -183,7 +183,7 @@
 	
 	var featureJSON = $.getJSON("/json/features/feature_list.json");
 
-	alert(featureJSON[1].name);
+	alert(featureJSON.name[1]);
 
 	var features = [];
 	$.each(featureJSON.name, function(i, obj) {
