--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -181,13 +181,39 @@
 	// "number of duplicate words"
 	// ];
 	
-	var featureJSON = $.getJSON("/json/features/feature_list.json");
+	var featureJSON = [
+	{
+		"location": "Average of offsite pages",
+		"class": [
+		[3],
+		[3],
+		[3]
+		],
+		"tag": [
+		"html",
+		"html",
+		"html"
+		],
+		"name": [
+		"Average backlink dale chall readability",
+		"Average backlink flesch reading ease",
+		"Average backlink flesch kincaid grade"
+		],
+		"description": [
+		"The average rating according to the Dale_Chall readability formula for the text content of all backlinks pointing to the onsite page in question:  http://en.wikipedia.org/wiki/Dale-Chall_Readability_Formula",
+		"The average measurement of Flesch reading ease for the text content of all backlinks pointing to the onsite page in question: http://simple.wikipedia.org/wiki/Flesch_Reading_Ease",
+		"A measurement of Flesch-Kincaid grade level for the text content of all backlinks pointing to the onsite page in question:  http://en.wikipedia.org/wiki/Flesch-Kincaid_readability_tests"
+		]
+	}
+	];
+	
+	// var featureJSON = $.getJSON("/json/features/feature_list.json");
 
-	alert(featureJSON.name[1]);
+	alert(featureJSON.name);
 
 	var features = [];
-	$.each(featureJSON.name, function(i, obj) {
-	    features.push([obj.value]);
+	$.each(featureJSON, function(i, obj) {
+	    features.push([obj.name.value]);
 	});
 	
 	// alert(features[1]);
