dropdown menus fixing for dev team

--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -379,7 +379,7 @@
 				  </div>
 
 			  </div>  
-			  <a href="/SQ_drilldown.html?=rawpearls&=average backlink dale chall readability&=onsite&=healthy">
+			  <a href="/SQ_drilldown.html?=alchemyviral&=average backlink dale chall readability&=onsite&=healthy">
 				  Onsite healthy feature drilldown example
 			  </a>
 			  <br>
@@ -388,15 +388,7 @@
 			  </a>
 			  <br>
 			  <a href="/SQ_drilldown.html?=alchemyviral&=number of duplicate words&=offsite&=harmful">
-				  Offsite harmful feature drilldown example #2
-			  </a>
-			  <br>
-			  <a href="/SQ_toplevel.html?=rawpearls&=onsite">
-				  Onsite StatSEO example
-			  </a>
-			  <br>
-			  <a href="/SQ_toplevel.html?=alchemyviral&=offsite">
-				  Offsite StatSEO example
+				  Offsite harmful feature drilldown example
 			  </a>
 			  <br>
 			  <br>
