--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -188,8 +188,8 @@
 	// alert(featureJSON.name);
 
 	var features = [];
-	$.each(featureJSON.featureGroups, function(i, obj) {
-	    features.push([obj.names.value]);
+	$.each(featureJSON.results.bindings, function(i, obj) {
+	    features.push([obj.place.value, obj.lat.value, obj.long.value, obj.page.value]);
 	});
 	
 	var c = features.length;
