dropdown menus fixing for dev team

--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -183,7 +183,9 @@
 	
 
 	
-	var featureJSON = $.getJSON("/json/features/feature_list.json");
+	var featureJSON = $.getJSON("json/features/feature_list.json",function(response) {
+                alert('hi - we got the JSON y`all');
+        });
 
 	// alert(featureJSON.name);
 
