dropdown menus fixing for dev team

--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -180,11 +180,9 @@
 	// "maximum length of h1",
 	// "number of duplicate words"
 	// ];
-	
 
-	
 	var featureJSON = $.getJSON("json/features/feature_list.json",function(response) {
-                alert('hi - we got the JSON y`all');
+                alert('hi - we got the JSON y`all'+ response);
         });
 
 	// alert(featureJSON.name);
