--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -186,7 +186,7 @@
 	var featureJSON = $.getJSON( "json/features/feature_list.json", function(results) {
 	  console.log( "JSON loading success" );
 	  $.each(results, function(index) {
-		  alert(results[index].name);
+		  // alert(results[index].name);
 		  features.push(results[index].name);
 	  });
 	})
@@ -205,9 +205,10 @@
 	// Set another completion function for the request above
 	featureJSON.complete(function() {
 	  console.log( "second complete" );
+	  console.log(features);
 	});
 	
-	console.log(features);
+	
 
 	
 	// $.each(featureJSON.results.bindings, function(i, obj) {
