dropdown menus fixing for dev team

--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -189,7 +189,7 @@
 		  // alert(results[index].name);
 		  blob = results[index].name;
 		  $.each(blob, function(nameIndex) {
-		  	features.push(blob[nameIndex].value);
+		  	features.push(blob[nameIndex]);
 		  });
 		  
 		  //features.push(results[index].name);
