dropdown menus fixing for dev team

--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -210,7 +210,7 @@
 	// Set another completion function for the request above
 	featureJSON.complete(function() {
 	  console.log( "second complete" );
-	  console.log(features);
+	  console.log("length of features array: " + features.length);
 	});
 	
 	
