dropdown menus fixing for dev team

--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -398,6 +398,7 @@
 					  <ul class="dropdown-menu navbar-right" role="menu" aria-labelledby="dropdownFeature">
 						  <script>
 						  featureSel = 'html5 detected';
+						  console.log("drop down features length: " + features.length);
 						  for (i=0;i<features.length;i++) {
 							  console.log(features[i]);
 							  document.write('<li role="presentation"><a role="menuitem" tabindex="-1" href="/SQ_drilldown.html?=' + websiteName + '&=' + features[i] + '&=' + pageType +'&=' + healthHarm +'">'+ features[i] +'</a></li>');
