dropdown menus fixing for dev team

--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -400,7 +400,7 @@
 						  featureSel = 'html5 detected';
 						  console.log("drop down features length: " + features.length);
 						  for (i=0;i<featureSel.length;i++) {
-							  console.log(featureSel[i]);
+							  console.log(features[i]);
 							  document.write('<li role="presentation"><a role="menuitem" tabindex="-1" href="/SQ_drilldown.html?=' + websiteName + '&=' + features[i] + '&=' + pageType +'&=' + healthHarm +'">'+ features[i] +'</a></li>');
 						  }
 						  </script>
