dropdown menus fixing for dev team

--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -367,18 +367,14 @@
 					  </button>
 					  <ul class="dropdown-menu navbar-right" role="menu" aria-labelledby="dropdownFeature">
 						  <script>
-
-
 						  // Perform other work here ...
 						  // Set another completion function for the request above
 						  featureJSON.complete(function() {
-							  console.log("drop down features length: " + features.length);
+							  console.log( "second complete" );
 							  for (i=0;i<features.length;i++) {
-								  console.log(features[i]);
+								  //console.log(features[i]);
 								  document.write('<li role="presentation"><a role="menuitem" tabindex="-1" href="/SQ_drilldown.html?=' + websiteName + '&=' + features[i] + '&=' + pageType +'&=' + healthHarm +'">'+ features[i] +'</a></li>');
 							  }
-							  console.log( "second complete" );
-							  console.log("length of features array: " + features.length);
 						  });
 
 						  </script>
