dropdown menus fixing for dev team

--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -380,13 +380,16 @@
 						  </script>
 						  <!-- <li role="presentation"><a role="menuitem" tabindex="-1" href="#">maximum length of h1</a></li>
 							  <li role="presentation"><a role="menuitem" tabindex="-1" href="#">number of duplicate words</a></li> -->
+							  
+							  <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><div id="features"></div></a></li>
+							  
 							  <li role="presentation" class="divider"></li>
 							  <li role="presentation"> <script>document.write('<a role="menuitem" tabindex="-1" href="/SQ_toplevel.html?=' + websiteName +'&='+ pageType+'">StatSEO</a>');</script></li>
 						  </ul>
-				  </div>
+					  </div>
 
-			  </div>  
-			  <a href="/SQ_drilldown.html?=alchemyviral&=average backlink dale chall readability&=onsite&=healthy">
+				  </div>  
+				  <a href="/SQ_drilldown.html?=alchemyviral&=average backlink dale chall readability&=onsite&=healthy">
 				  Onsite healthy feature drilldown example
 			  </a>
 			  <br>
