dropdown menus fixing for dev team

--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -207,7 +207,7 @@
 		for(var i = 0; i < features.length; i++) {
 		    var opt = features[i];
 		    var el = document.createElement("li");
-			el.className = "presentation";
+			el.role = "presentation";
 		    el.textContent = opt;
 		    el.value = opt;
 		    select.appendChild(el);
