dropdown menus fixing for dev team

--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -244,11 +244,11 @@
 		
 		alert("website name is " + websiteName);
 
-		var pageType = document.getElementById("selectOnOff");
+		var pageType = document.getElementById("selectOnOff").options.text;
 		
 		alert("page type is " + pageType);
 		
-		var feature = document.getElementById("selectFeat");
+		var feature = document.getElementById("selectFeat").options.text;
 		
 		alert("feature selection is " + feature);
 		
