--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -247,7 +247,7 @@
 		var pageTypeX = document.getElementById("selectOnOff").selectedIndex;
 		var pageTypeY = document.getElementById("selectOnOff").options;
 		
-		alert("page type is " + pageTypeY[pageTypeY].text);
+		alert("page type is " + pageTypeY[pageTypeX].text);
 		
 		var featureX = document.getElementById("selectFeat").selectedIndex;
 		var featureY = document.getElementById("selectFeat").options;
