dropdown menus fixing for dev team

--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -246,7 +246,7 @@
 
 		var pageTypeX = document.getElementById("selectOnOff").selectedIndex;
 		var pageTypeY = document.getElementById("selectOnOff").options;
-		var pageType = pageTypeY[pageTypeX].text.split(' ')[0],toLowerCase();
+		var pageType = pageTypeY[pageTypeX].text.split(' ')[0].toLowerCase();
 		
 		alert("page type is " + pageType);
 		
