dropdown menus fixing for dev team

--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -257,6 +257,21 @@
 		//alert("feature selection is " + featureSel);
 				// 
 		// document.getElementById("dispUrl").innerHTML = "for " + websiteName;
+		
+		
+	  // websiteName = 'leighmans'; 
+	  if (featureSel.length > 0 && pageType.length > 0 && featureX > 2){
+		  window.open("SQ_drilldown.html?="+websiteName+"&="+featureSel+"&="+pageType);
+	  }
+	  else if(featureSel.length > 0 && pageType.length > 0 && featureX == 2){
+		  window.open("SQ_toplevel.html?="+websiteName+"&="+pageType);
+	  }
+	  else{
+		 
+	  }
+	  // document.write('<a href = "SQ_drilldown.html?='+websiteName+'">submit!</a>');
+	  
+		
 
 	}
 	
@@ -395,18 +410,9 @@
 					  <!-- <button onclick="doStuff()" type="submit" class="btn btn-primary" id="submitUrl"> -->
 						  <button onclick="doStuff()" type="submit" class="btn btn-primary" id="submitUrl">
 							  <script>
-							  // websiteName = 'leighmans'; 
-							  if (featureSel.length > 0 && pageType.length > 0 && featureX > 2){
-								  document.write('<a href = "SQ_drilldown.html?='+websiteName+'&='+featureSel+'&='+pageType+'">submit!</a>');
-							  }
-							  else if(featureSel.length > 0 && pageType.length > 0 && featureX == 2){
-								  document.write('<a href = "SQ_toplevel.html?='+websiteName+'&='+pageType+'">submit!</a>');
-							  }
-							  else{
-								  document.write('submit!')
-							  }
-							  // document.write('<a href = "SQ_drilldown.html?='+websiteName+'">submit!</a>');
+
 							  </script>
+							  submit!
 							  
 						  </button>
 			  
