open tab same window

--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -263,10 +263,10 @@
 		
 	  // websiteName = 'leighmans'; 
 	  if (websiteName.length > 0 && featureSel.length > 0 && pageType.length > 0 && featureX > 2){
-		  window.open("SQ_drilldown.html?="+websiteName+"&="+featureSel+"&="+pageType);
+		  window.open("SQ_drilldown.html?="+websiteName+"&="+featureSel+"&="+pageType ,"_self");
 	  }
 	  else if(websiteName.length > 0 && featureSel.length > 0 && pageType.length > 0 && featureX == 2){
-		  window.open("SQ_toplevel.html?="+websiteName+"&="+pageType);
+		  window.open("SQ_toplevel.html?="+websiteName+"&="+pageType, ,"_self");
 	  }
 	  else{
 		 
