--- a/feature_def.html
+++ b/feature_def.html
@@ -296,14 +296,13 @@
 			  Under construction
 		  </div>
 		  
-		  <div class="accordion" id="accordion1">
-			  <div class="accordion-group">
-				  <div class="accordion-heading">
-					  <a class="accordion-toggle" data-toggle="collapse"
-					  data-parent="#accordion1" href="#collapseOne">
+		  <div class="accordion-group">
+			  <div class="accordion-heading">
+				  <a class="accordion-toggle" data-toggle="collapse"
+				  data-parent="#accordion2" href="#collapseTwo">
 					  <script>document.write(featureName);</script></a>
 				  </div>
-				  <div id="collapseOne" class="accordion-body collapse">
+				  <div id="collapseTwo" class="accordion-body collapse">
 					  <div class="accordion-inner">
 						  Over 100 features taken straight from the html pages of your domain (related to structure and content), approximately 20 calculated (or premium) features (such as ratios of one feature to another) and 5-10 advanced features which analyse backlinks and their effect on the onsite.
 					  </div>
