feature list page accordian

--- a/feature_def.html
+++ b/feature_def.html
@@ -295,11 +295,11 @@
 		  <div class="well">
 			  Under construction
 		  </div>
-		  
-		  <div class="accordion-group">
-			  <div class="accordion-heading">
-				  <a class="accordion-toggle" data-toggle="collapse"
-				  data-parent="#accordion2" href="#collapseTwo">
+		  <div class="accordion" id="accordion2">
+			  <div class="accordion-group">
+				  <div class="accordion-heading">
+					  <a class="accordion-toggle" data-toggle="collapse"
+					  data-parent="#accordion2" href="#collapseTwo">
 					  <script>document.write(featureName);</script></a>
 				  </div>
 				  <div id="collapseTwo" class="accordion-body collapse">
